@@ -1,11 +1,13 @@
 package com.dcspa.prism.controller;
 
-import com.dcspa.prism.controller.support.ReferentialPutHelper;
+import com.dcspa.prism.codegen.AutoCodePutMerge;
 
+import com.dcspa.prism.controller.support.ReferentielEnricher;
 import com.dcspa.prism.entity.Iep;
 import com.dcspa.prism.service.IepService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -15,9 +17,10 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @RestController
 @RequestMapping("/api/iep")
@@ -26,39 +29,53 @@ public class IepController {
 
 	private final IepService iepService;
 
+	@Transactional(readOnly = true)
 	@GetMapping
 	public ResponseEntity<List<Map<String, Object>>> findAll() {
-		// Evite LazyInitializationException sur drena
-		List<Map<String, Object>> list = iepService.findAll().stream()
-				.map(i -> Map.<String, Object>of(
-						"id", i.getId(),
-						"codeIep", i.getCodeIep(),
-						"nomIep", i.getNomIep()
-				))
-				.collect(Collectors.toList());
-		return ResponseEntity.ok(list);
+		return ResponseEntity.ok(iepService.findAll().stream().map(this::toRow).toList());
 	}
 
+	@Transactional(readOnly = true)
 	@GetMapping("/{id}")
-	public ResponseEntity<Iep> findById(@PathVariable Integer id) {
+	public ResponseEntity<Map<String, Object>> findById(@PathVariable Integer id) {
 		return iepService.findById(id)
+				.map(this::toRow)
 				.map(ResponseEntity::ok)
 				.orElse(ResponseEntity.notFound().build());
 	}
 
+	@Transactional
 	@PostMapping
-	public ResponseEntity<Iep> create(@RequestBody Iep body) {
-		return ResponseEntity.status(201).body(iepService.save(body));
+	public ResponseEntity<Map<String, Object>> create(@RequestBody Iep body) {
+		return ResponseEntity.status(201).body(toRow(iepService.save(body)));
 	}
 
+	@Transactional
 	@PutMapping("/{id}")
-	public ResponseEntity<Iep> update(@PathVariable Integer id, @RequestBody Iep body) {
-		return ReferentialPutHelper.putPreservingAutoCode(id, body, iepService::findById, iepService::save);
+	public ResponseEntity<Map<String, Object>> update(@PathVariable Integer id, @RequestBody Iep body) {
+		Optional<Iep> opt = iepService.findById(id);
+		if (opt.isEmpty()) {
+			return ResponseEntity.notFound().build();
+		}
+		AutoCodePutMerge.preserveAutoCodeFromExisting(opt.get(), body);
+		body.setId(id);
+		return ResponseEntity.ok(toRow(iepService.save(body)));
 	}
 
 	@DeleteMapping("/{id}")
 	public ResponseEntity<Void> delete(@PathVariable Integer id) {
 		iepService.deleteById(id);
 		return ResponseEntity.noContent().build();
+	}
+
+	private Map<String, Object> toRow(Iep e) {
+		Map<String, Object> m = new LinkedHashMap<>();
+		m.put("id", e.getId());
+		ReferentielEnricher.putRef(m, "Drena", e.getIdDrena());
+		m.put("codeIep", e.getCodeIep());
+		m.put("nomIep", e.getNomIep());
+		m.put("mailIep", e.getMailIep());
+		m.put("telephoneIep", e.getTelephoneIep());
+		return m;
 	}
 }
